--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "Henry Colwell",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
     "dateformat": "^5.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "heroku": "^7.65.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
@@ -26,9 +29,22 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": "v16.15.1"
-  }
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LedoLedoLedo/BOEv1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LedoLedoLedo/BOEv1/issues"
+  },
+  "homepage": "https://github.com/LedoLedoLedo/BOEv1#readme"
 }
