--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
+    "connect-mongo": "^4.6.0",
     "dateformat": "^5.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
