--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "heroku": "^7.65.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongo": "^0.1.0",
     "mongodb": "^4.11.0",
