--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
+    "connect-mongo": "^4.6.0",
     "dateformat": "^5.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -26,8 +27,9 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
     "mongodb": "^4.11.0",
-    "mongoose": "^6.7.1",
+    "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
