added repository and contributors

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "nodemon server.js"
   },
   "author": "Henry Colwell",
+  "contributors": [
+    "Alejandro Fernandez-Sarasua", 
+    "Lorena Sarasua-Fernandez"
+  ],
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
